# programmation-work

./: .gitignore  LICENSE  README.md  hanoi.cabal  programmation-work.cabal  stack.yaml
lib/: CreditCardValidator.hs  Evaluation.hs  Hanoi.hs  Insert.hs  QuickSort.hs  YCombinatorExamples.hs
lib/26/02/2024/: Split.hs
lib/BookExercises/: Examples.hs  Library.hs  Parenthesise.hs  SyntacticErrors.hs  tempCodeRunnerFile.hs
lib/Day26Month02/: Split.hs
lib/Docs/: YCombinator.md
src/: Main.hs
test/: TestHanoi.hs
