cabal-version:      3.0
name:               hanoi
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Santiago Quiroga
maintainer:         quiroga.default.santiago@gmail.com
category:           Math
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -threaded 
                 -rtsopts 
                 -with-rtsopts=-N
common configuration
    default-language: Haskell2010
    build-depends: base

library
    import:           configuration
    hs-source-dirs:   
        lib
    exposed-modules:
        Hanoi

executable hanoi
    import:             warnings,
                        configuration
    hs-source-dirs:     
        src
    main-is:            Main.hs
    build-depends:
        hanoi

Test-Suite test
    import:             warnings,
                        configuration
    hs-source-dirs:
        test
    main-is:            TestHanoi.hs
    build-depends:
        hanoi,
        QuickCheck
    type:               exitcode-stdio-1.0
